[tool.poetry]
name = "siemens"
version = "0.1.0"
description = ""
authors = ["franperic <fran.peric@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.3"
numpy = "1.21"
matplotlib = "3.4"
sklearn = "^0.0"
streamlit = "^0.89.0"
pydeck = "^0.7.0"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
